--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- 
+  Общее: 
+  1) не пиши названия классов с большой буквы. В идеале писать в БЭМ-стиле 
+    (почитай буквально только о концепции и том, что такое "блок, элемент, модификатор") 
+  2) Не пиши ничего транслитом (класс stroka). Только английский
+  3) Реши проблему с горизонтальным скроллом страницы (просмотри через инструменты разработчика, 
+    1 элемент имеет ширину = ширине страницы)
+  4) Названия классов должны быть более описательными
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,12 +17,29 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- 1 -->
+    <!-- В атрибут alt нужно указывать то, что изображено на картинке. Если картинка чисто 
+      декоративная, то alt должен оставаться пустым. Этот атрибут вообще нужен для скринридеров - 
+      программ которые читают вслух страницы для слабовидящих, так что если эта картинка не имеет 
+      значения, то вписывать ей в альт ничего не надо
+     -->
     <img class="ellipse2" src="img/Ellipse2.svg" alt="элипс" />
     <img class="ellipse3" src="img/Ellipse3.svg" alt="'эллипс3" />
     <img class="ellipse4" src="img/Ellipse4.svg" alt="'эллипс4" />
+    <!-- 2 -->
+    <!-- h1.Insta div.stroka и button.login стоит обернуть в один тег и выровнять по вертикали.
+      В какой блок?)
+    -->
     <h1 class="Insta">Insta</h1>
+    <!-- 3 -->
+    <!-- Вместо дива тут лучше использовать nav - будет семантично, т.к. в этом блоке находятся
+      навигационные элементы страницы
+     -->
     <div class="stroka">
-      <!--  -->
+      <!-- 4 -->
+      <!-- Все эти дивы должны быть ссылками. Класс "Home" тут не нужен, т.к. на макете было 
+        показано состояние при наведении на ссылку
+       -->
       <div class="Home">Home</div>
       <div>About Us</div>
       <div>Instagram Like</div>
@@ -20,10 +47,17 @@
       <div>Contact Us</div>
     </div>
     <button class="login">Login</button>
+    <!-- 5 -->
+    <!-- Элементы, начиная с button-height по button.button должны быть объединены в общий 
+      семантичный блок (какой подходит?) 
+      Сейчас эти элементы позиционированны через absoltue или relative, без чего явно можно
+      обойтись если их объединить общим родителем.
+     -->
     <button class="button-height">
       <span class="star"> Be Celebrity</span>
     </button>
     <h2>Boost Your Instagram Page By <span>A Tricky way </span></h2>
+    <!-- про alt - см. замечение 1, про название классов - общее замечание 4 -->
     <img class="image1" src="img/phone.svg" alt="веселая картинка" />
     <div class="imagefun"></div>
     <h3>
@@ -33,7 +67,12 @@
     </h3>
     <button class="button">Buy follower</button>
     <div class="information">More information</div>
+    <!-- про название классов - общее замечание 2 -->
     <div class="statistika">
+      <!-- 6 -->
+      <!-- Engagements, Satisfied, Return, Good - однотипные блоки, нужно стилизовать через 1
+        класс, а не плодить 4 с одними стилями
+      -->
       <div class="Engagements">
         <div>
           <h4>34.4k</h4>
